--- a/package.json
+++ b/package.json
@@ -9,15 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "localforage": "^1.10.0",
     "open-props": "^1.5.16",
-    "postcss-jit-props": "^1.0.13",
     "solid-js": "^1.7.8",
+    "solid-styled": "^0.9.0",
     "unplugin-auto-import": "^0.16.6",
-    "unplugin-icons": "^0.17.0"
+    "unplugin-icons": "^0.17.0",
+    "unplugin-solid-styled": "^0.9.1"
   },
   "devDependencies": {
     "@iconify-json/tabler": "^1.1.91",
-    "postcss": "^8.4.30",
     "typescript": "^5.0.2",
     "vite": "^4.4.5",
     "vite-plugin-solid": "^2.7.0"
